fix: change parniors image size property for fix layout bug

--- a/query.css
+++ b/query.css
@@ -11,11 +11,16 @@
   .hero-title__subtitle {
     font-size: 1.8rem;
   }
+
+  .partniors__left,
+  .partniors__right {
+    display: none;
+  }
 }
 
 @media (max-width: 768px) {
   .container {
-    max-width: 640px;
+    max-width: 95%;
   }
 
   .navigation__list {
@@ -122,75 +127,54 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-  }
-
-  .partniors__items {
     touch-action: pan-y;
     overflow-x: scroll;
     scrollbar-width: none;
     -ms-overflow-style: none;
   }
 
+  .partniors__items img,
+  .partniors__alone img {
+    padding-inline: 1rem;
+  }
+
   .partniors__items::-webkit-scrollbar {
     display: none;
   }
-}
 
-@media (max-width: 640px) {
-  .container {
-    max-width: 595px;
-  }
-  .mobile-active {
-    font-size: 1.8rem;
+  .partniors__head {
+    text-align: center;
+    font-size: 120%;
+    font-weight: 600;
   }
 }
 
 @media (max-width: 585px) {
-  .container {
-    max-width: 525px;
-  }
-
   .mobile-active {
-    font-size: 1.5rem;
+    font-size: 95%;
+  }
+  .container {
+    max-width: 100%;
   }
 }
 
 @media (max-width: 525px) {
-  .container {
-    max-width: 475px;
+  .navigation__logo img {
+    width: 80%;
+    height: 80%;
   }
+
+  .partniors__items img,
+  .partniors__alone img {
+    width: 95%;
+  }
+
   .hero-title__subtitle {
     font-size: 1rem;
-  }
-
-  .mobile-active {
-    font-size: 1.1rem;
-  }
-}
-
-@media (max-width: 475px) {
-  .container {
-    max-width: 398px;
-  }
-}
-
-@media (max-width: 398px) {
-  .container {
-    max-width: 328px;
-  }
-}
-
-@media (max-width: 328px) {
-  .container {
-    max-width: 285px;
   }
 }
 
 @media (max-width: 285px) {
-  .container {
-    max-width: 235px;
-  }
-
   /* footer section */
   .footer__container {
     gap: 2rem;
